--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "food",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -10,13 +9,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.1",
     "ejs": "^3.1.6",
-    "express": "^4.17.1",
+    "express": "^4.17.2",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^6.1.1"
+    "mongoose": "^6.1.3"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.15"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/madkle/mybrary.git"
+  },
+  "bugs": {
+    "url": "https://github.com/madkle/mybrary/issues"
+  },
+  "homepage": "https://github.com/madkle/mybrary#readme",
+  "description": ""
 }
